--- a/CodigoFuente/x32/Orbita.Controles/Orbita.Controles.VA/Hardware/Formularios/FrmMonitorizacionIO.resx
+++ b/CodigoFuente/x32/Orbita.Controles/Orbita.Controles.VA/Hardware/Formularios/FrmMonitorizacionIO.resx
@@ -126,7 +126,7 @@
   <metadata name="toolbarsManager.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>698, 17</value>
   </metadata>
-  <metadata name="orbitaTooltipOrbita.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+  <metadata name="OrbTooltip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
   <metadata name="menuTerminal.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
