--- a/CodigoFuente/x32/Orbita.Controles/Orbita.Controles.VA/Variables/Formularios/FrmMonitorizacionVariables.resx
+++ b/CodigoFuente/x32/Orbita.Controles/Orbita.Controles.VA/Variables/Formularios/FrmMonitorizacionVariables.resx
@@ -129,7 +129,7 @@
   <metadata name="toolbarsManager.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>307, 17</value>
   </metadata>
-  <metadata name="orbitaTooltipOrbita.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+  <metadata name="OrbTooltip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
   <metadata name="timerRefresco.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
