--- a/CodigoFuente/x32/Orbita.Controles/Orbita.Controles.VA/Properties/Resources.resx
+++ b/CodigoFuente/x32/Orbita.Controles/Orbita.Controles.VA/Properties/Resources.resx
@@ -331,4 +331,7 @@
   <data name="ImgAccion24" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ImgAccion24.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="BtnAplicar24" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\BtnAplicar24.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
