--- a/CodigoFuente/x32/Orbita.Controles/Orbita.Controles.VA/Properties/Resources.resx
+++ b/CodigoFuente/x32/Orbita.Controles/Orbita.Controles.VA/Properties/Resources.resx
@@ -301,7 +301,7 @@
   <data name="media_end_24x24" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\media_end_24x24.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="imgError64" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="ImgError64" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\imgError64.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="ImgZoomIn16" type="System.Resources.ResXFileRef, System.Windows.Forms">
@@ -528,5 +528,17 @@
   </data>
   <data name="ImgEstados24" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ImgEstados24.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ImgBorrar24" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ImgBorrar24.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ImgInfoError64" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ImgInfoError64.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ImgLog24" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ImgLog24.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ImgWarning64" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ImgWarning64.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
